--- a/ui/tiny_mce/content.css
+++ b/ui/tiny_mce/content.css
@@ -1,9 +1,7 @@
-body {
-  padding: 8px;
-}
+body { padding: 8px; }
 
 body, td {
-  font-size: 90% !important; /* already include inside aruni css */
+  font-size: 90% !important; /* already include inside default css */
   font-family: "Arial", "DejaVu Sans", sans-serif !important;
 }
 
