--- a/ui/themes/style.css
+++ b/ui/themes/style.css
@@ -1,5 +1,5 @@
 /* CSS */
-#header {
+#header-out {
   min-height: 90px;
   background-color: #0467BA;
   background-image: url(./;get_file?name=banner);
